parsing/internal/yyparser.output
Terminals unused in grammar

    STRING
    NIL
    COLON
    DOT
    LBRACK
    RBRACK
    LBRACE
    RBRACE
    UMINUS
    ARRAY


State 11 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce
State 31 conflicts: 2 shift/reduce
State 34 conflicts: 1 shift/reduce
State 38 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 86 conflicts: 1 shift/reduce
State 92 conflicts: 1 shift/reduce
State 95 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce, 6 reduce/reduce
State 139 conflicts: 2 shift/reduce
State 144 conflicts: 1 shift/reduce
State 146 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: stmseq

    2 ifmark: IF

    3 elifmark: ENDTOKEN ELSIF
    4         | ELSIF

    5 thenmark: ENDTOKEN THEN ENDTOKEN
    6         | THEN ENDTOKEN
    7         | ENDTOKEN THEN
    8         | THEN

    9 elsemark: ENDTOKEN ELSE ENDTOKEN
   10         | ELSE ENDTOKEN
   11         | ENDTOKEN ELSE
   12         | ELSE

   13 endmark: ENDTOKEN END endmarker2
   14        | END endmarker2

   15 defmark: DEF

   16 lparenmark: LPAREN ENDTOKEN
   17           | LPAREN

   18 rparenmark: ENDTOKEN RPAREN ENDTOKEN
   19           | RPAREN ENDTOKEN
   20           | ENDTOKEN RPAREN
   21           | RPAREN

   22 returnmark: RETURN expression

   23 whilemark: WHILE

   24 unlessmark: UNLESS

   25 domark: ENDTOKEN DO ENDTOKEN
   26       | DO ENDTOKEN
   27       | ENDTOKEN DO
   28       | DO

   29 untillmark: UNTIL

   30 casemark: CASE

   31 whenmark: ENDTOKEN WHEN
   32         | WHEN

   33 commamark: ENDTOKEN COMMA ENDTOKEN
   34          | COMMA ENDTOKEN
   35          | ENDTOKEN COMMA
   36          | COMMA

   37 statement: PRINT lparenmark expressionlist rparenmark endmarker
   38          | ifmark expression thenmark stmseq ifstm
   39          | whilemark expression domark stmseq endmark
   40          | untillmark expression domark stmseq endmark
   41          | unlessmark expression thenmark stmseq endmark
   42          | unlessmark expression thenmark stmseq elsemark stmseq endmark
   43          | casemark expression whenmark expression thenmark stmseq whenstm
   44          | defmark designator lparenmark argumentlist rparenmark stmseq endmark
   45          | UNDEF designator
   46          | returnmark
   47          | expression

   48 ifstm: elifmark expression thenmark stmseq ifstm
   49      | elsemark stmseq endmark
   50      | endmark

   51 whenstm: whenmark expression thenmark stmseq whenstm
   52        | elsemark stmseq endmark
   53        | endmark

   54 stmseq: statement stmseq2
   55       | statement endmarker

   56 stmseq2: endmarker stmseq
   57        | endmarker statement

   58 endmarker2: ENDTOKEN
   59           | ENDTOKEN endmarker2
   60           | SEMICOLON
   61           | SEMICOLON endmarker2

   62 endmarker: endmarker2
   63          | %empty

   64 expression: expr2
   65           | expr2 EQ expr2
   66           | expr2 NEQ expr2
   67           | expr2 LT expr2
   68           | expr2 LE expr2
   69           | expr2 GT expr2
   70           | expr2 GE expr2
   71           | expr2 AND expr2
   72           | expr2 OR expr2
   73           | designator ASSIGN expression
   74           | designator PLUSASSIGN expression
   75           | designator MINUSASSIGN expression
   76           | designator MULASSIGN expression
   77           | designator DIVASSIGN expression
   78           | designator MODASSIGN expression
   79           | designator ANDASSIGN expression
   80           | designator ORASSIGN expression
   81           | designator BANDASSIGN expression
   82           | designator BORASSIGN expression
   83           | designator XORASSIGN expression

   84 argumentlist: designator commamark argumentlist
   85             | designator
   86             | %empty

   87 expressionlist: expression commamark expressionlist
   88               | expression
   89               | %empty

   90 expr2: expr3
   91      | expr2 PLUS expr3
   92      | expr2 MINUS expr3

   93 expr3: expr4
   94      | expr3 TIMES expr4
   95      | expr3 DIVIDE expr4
   96      | expr3 MOD expr4
   97      | expr3 BINAND expr4
   98      | expr3 BINOR expr4
   99      | expr3 BINXOR expr4

  100 expr4: PLUS expr4
  101      | MINUS expr4
  102      | NOT expr4
  103      | BINNOT expr4
  104      | lparenmark expression rparenmark
  105      | lparenmark statement commamark expression rparenmark
  106      | designator lparenmark expressionlist rparenmark
  107      | INTEGER
  108      | REAL
  109      | BOOLEANVAR
  110      | designator

  111 designator: ID


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <string> (500) 111
    INTEGER <integer> (501) 107
    REAL <real> (502) 108
    BOOLEANVAR <boolean> (503) 109
    STRING <string> (504)
    NIL (505)
    IF (506) 2
    THEN (507) 5 6 7 8
    ELSIF (508) 3 4
    ELSE (509) 9 10 11 12
    WHILE (510) 23
    UNTIL (511) 29
    DO (512) 25 26 27 28
    UNLESS (513) 24
    WHEN (514) 31 32
    CASE (515) 30
    END (516) 13 14
    RETURN (517) 22
    COMMA (518) 33 34 35 36
    COLON (519)
    SEMICOLON (520) 60 61
    DOT (521)
    LPAREN (522) 16 17
    RPAREN (523) 18 19 20 21
    LBRACK (524)
    RBRACK (525)
    LBRACE (526)
    RBRACE (527)
    ASSIGN (528) 73
    PLUSASSIGN (529) 74
    MINUSASSIGN (530) 75
    MULASSIGN (531) 76
    DIVASSIGN (532) 77
    MODASSIGN (533) 78
    ANDASSIGN (534) 79
    ORASSIGN (535) 80
    BANDASSIGN (536) 81
    BORASSIGN (537) 82
    XORASSIGN (538) 83
    PLUS (539) 91 100
    MINUS (540) 92 101
    TIMES (541) 94
    DIVIDE (542) 95
    MOD (543) 96
    UMINUS (544)
    BINAND (545) 97
    BINOR (546) 98
    BINXOR (547) 99
    BINNOT (548) 103
    EQ (549) 65
    NEQ (550) 66
    LT (551) 67
    LE (552) 68
    GT (553) 69
    GE (554) 70
    AND (555) 71
    OR (556) 72
    NOT (557) 102
    ARRAY (558)
    DEF (559) 15
    UNDEF (560) 45
    PRINT (561) 37
    ENDTOKEN (562) 3 5 6 7 9 10 11 13 16 18 19 20 25 26 27 31 33 34 35 58 59


Nonterminals, with rules where they appear

    $accept (66)
        on left: 0
    ROOT <stm> (67)
        on left: 1
        on right: 0
    ifmark (68)
        on left: 2
        on right: 38
    elifmark (69)
        on left: 3 4
        on right: 48
    thenmark (70)
        on left: 5 6 7 8
        on right: 38 41 42 43 48 51
    elsemark (71)
        on left: 9 10 11 12
        on right: 42 49 52
    endmark (72)
        on left: 13 14
        on right: 39 40 41 42 44 49 50 52 53
    defmark (73)
        on left: 15
        on right: 44
    lparenmark (74)
        on left: 16 17
        on right: 37 44 104 105 106
    rparenmark (75)
        on left: 18 19 20 21
        on right: 37 44 104 105 106
    returnmark <stm> (76)
        on left: 22
        on right: 46
    whilemark (77)
        on left: 23
        on right: 39
    unlessmark (78)
        on left: 24
        on right: 41 42
    domark (79)
        on left: 25 26 27 28
        on right: 39 40
    untillmark (80)
        on left: 29
        on right: 40
    casemark (81)
        on left: 30
        on right: 43
    whenmark (82)
        on left: 31 32
        on right: 43 51
    commamark (83)
        on left: 33 34 35 36
        on right: 84 87 105
    statement <stm> (84)
        on left: 37 38 39 40 41 42 43 44 45 46 47
        on right: 54 55 57 105
    ifstm <stm> (85)
        on left: 48 49 50
        on right: 38 48
    whenstm <stm> (86)
        on left: 51 52 53
        on right: 43 51
    stmseq <stm> (87)
        on left: 54 55
        on right: 1 38 39 40 41 42 43 44 48 49 51 52 56
    stmseq2 <stm> (88)
        on left: 56 57
        on right: 54
    endmarker2 (89)
        on left: 58 59 60 61
        on right: 13 14 59 61 62
    endmarker (90)
        on left: 62 63
        on right: 37 55 56 57
    expression <exp> (91)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
        on right: 22 38 39 40 41 42 43 47 48 51 73 74 75 76 77 78 79 80 81 82 83 87 88 104 105
    argumentlist <expli> (92)
        on left: 84 85 86
        on right: 44 84
    expressionlist <expli> (93)
        on left: 87 88 89
        on right: 37 87 106
    expr2 <exp> (94)
        on left: 90 91 92
        on right: 64 65 66 67 68 69 70 71 72 91 92
    expr3 <exp> (95)
        on left: 93 94 95 96 97 98 99
        on right: 90 91 92 94 95 96 97 98 99
    expr4 <exp> (96)
        on left: 100 101 102 103 104 105 106 107 108 109 110
        on right: 93 94 95 96 97 98 99 100 101 102 103
    designator <idexp> (97)
        on left: 111
        on right: 44 45 73 74 75 76 77 78 79 80 81 82 83 84 85 106 110


State 0

    0 $accept: . ROOT $end

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    UNTIL       shift, and go to state 7
    UNLESS      shift, and go to state 8
    CASE        shift, and go to state 9
    RETURN      shift, and go to state 10
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15
    DEF         shift, and go to state 16
    UNDEF       shift, and go to state 17
    PRINT       shift, and go to state 18

    ROOT        go to state 19
    ifmark      go to state 20
    defmark     go to state 21
    lparenmark  go to state 22
    returnmark  go to state 23
    whilemark   go to state 24
    unlessmark  go to state 25
    untillmark  go to state 26
    casemark    go to state 27
    statement   go to state 28
    stmseq      go to state 29
    expression  go to state 30
    expr2       go to state 31
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 34


State 1

  111 designator: ID .

    $default  reduce using rule 111 (designator)


State 2

  107 expr4: INTEGER .

    $default  reduce using rule 107 (expr4)


State 3

  108 expr4: REAL .

    $default  reduce using rule 108 (expr4)


State 4

  109 expr4: BOOLEANVAR .

    $default  reduce using rule 109 (expr4)


State 5

    2 ifmark: IF .

    $default  reduce using rule 2 (ifmark)


State 6

   23 whilemark: WHILE .

    $default  reduce using rule 23 (whilemark)


State 7

   29 untillmark: UNTIL .

    $default  reduce using rule 29 (untillmark)


State 8

   24 unlessmark: UNLESS .

    $default  reduce using rule 24 (unlessmark)


State 9

   30 casemark: CASE .

    $default  reduce using rule 30 (casemark)


State 10

   22 returnmark: RETURN . expression

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expression  go to state 35
    expr2       go to state 31
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 34


State 11

   16 lparenmark: LPAREN . ENDTOKEN
   17           | LPAREN .

    ENDTOKEN  shift, and go to state 36

    ENDTOKEN  [reduce using rule 17 (lparenmark)]
    $default  reduce using rule 17 (lparenmark)


State 12

  100 expr4: PLUS . expr4

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr4       go to state 37
    designator  go to state 38


State 13

  101 expr4: MINUS . expr4

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr4       go to state 39
    designator  go to state 38


State 14

  103 expr4: BINNOT . expr4

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr4       go to state 40
    designator  go to state 38


State 15

  102 expr4: NOT . expr4

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr4       go to state 41
    designator  go to state 38


State 16

   15 defmark: DEF .

    $default  reduce using rule 15 (defmark)


State 17

   45 statement: UNDEF . designator

    ID  shift, and go to state 1

    designator  go to state 42


State 18

   37 statement: PRINT . lparenmark expressionlist rparenmark endmarker

    LPAREN  shift, and go to state 11

    lparenmark  go to state 43


State 19

    0 $accept: ROOT . $end

    $end  shift, and go to state 44


State 20

   38 statement: ifmark . expression thenmark stmseq ifstm

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expression  go to state 45
    expr2       go to state 31
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 34


State 21

   44 statement: defmark . designator lparenmark argumentlist rparenmark stmseq endmark

    ID  shift, and go to state 1

    designator  go to state 46


State 22

  104 expr4: lparenmark . expression rparenmark
  105      | lparenmark . statement commamark expression rparenmark

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    UNTIL       shift, and go to state 7
    UNLESS      shift, and go to state 8
    CASE        shift, and go to state 9
    RETURN      shift, and go to state 10
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15
    DEF         shift, and go to state 16
    UNDEF       shift, and go to state 17
    PRINT       shift, and go to state 18

    ifmark      go to state 20
    defmark     go to state 21
    lparenmark  go to state 22
    returnmark  go to state 23
    whilemark   go to state 24
    unlessmark  go to state 25
    untillmark  go to state 26
    casemark    go to state 27
    statement   go to state 47
    expression  go to state 48
    expr2       go to state 31
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 34


State 23

   46 statement: returnmark .

    $default  reduce using rule 46 (statement)


State 24

   39 statement: whilemark . expression domark stmseq endmark

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expression  go to state 49
    expr2       go to state 31
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 34


State 25

   41 statement: unlessmark . expression thenmark stmseq endmark
   42          | unlessmark . expression thenmark stmseq elsemark stmseq endmark

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expression  go to state 50
    expr2       go to state 31
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 34


State 26

   40 statement: untillmark . expression domark stmseq endmark

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expression  go to state 51
    expr2       go to state 31
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 34


State 27

   43 statement: casemark . expression whenmark expression thenmark stmseq whenstm

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expression  go to state 52
    expr2       go to state 31
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 34


State 28

   54 stmseq: statement . stmseq2
   55       | statement . endmarker

    SEMICOLON  shift, and go to state 53
    ENDTOKEN   shift, and go to state 54

    ENDTOKEN  [reduce using rule 63 (endmarker)]
    $default  reduce using rule 63 (endmarker)

    stmseq2     go to state 55
    endmarker2  go to state 56
    endmarker   go to state 57


State 29

    1 ROOT: stmseq .

    $default  reduce using rule 1 (ROOT)


State 30

   47 statement: expression .

    $default  reduce using rule 47 (statement)


State 31

   64 expression: expr2 .
   65           | expr2 . EQ expr2
   66           | expr2 . NEQ expr2
   67           | expr2 . LT expr2
   68           | expr2 . LE expr2
   69           | expr2 . GT expr2
   70           | expr2 . GE expr2
   71           | expr2 . AND expr2
   72           | expr2 . OR expr2
   91 expr2: expr2 . PLUS expr3
   92      | expr2 . MINUS expr3

    PLUS   shift, and go to state 58
    MINUS  shift, and go to state 59
    EQ     shift, and go to state 60
    NEQ    shift, and go to state 61
    LT     shift, and go to state 62
    LE     shift, and go to state 63
    GT     shift, and go to state 64
    GE     shift, and go to state 65
    AND    shift, and go to state 66
    OR     shift, and go to state 67

    PLUS      [reduce using rule 64 (expression)]
    MINUS     [reduce using rule 64 (expression)]
    $default  reduce using rule 64 (expression)


State 32

   90 expr2: expr3 .
   94 expr3: expr3 . TIMES expr4
   95      | expr3 . DIVIDE expr4
   96      | expr3 . MOD expr4
   97      | expr3 . BINAND expr4
   98      | expr3 . BINOR expr4
   99      | expr3 . BINXOR expr4

    TIMES   shift, and go to state 68
    DIVIDE  shift, and go to state 69
    MOD     shift, and go to state 70
    BINAND  shift, and go to state 71
    BINOR   shift, and go to state 72
    BINXOR  shift, and go to state 73

    $default  reduce using rule 90 (expr2)


State 33

   93 expr3: expr4 .

    $default  reduce using rule 93 (expr3)


State 34

   73 expression: designator . ASSIGN expression
   74           | designator . PLUSASSIGN expression
   75           | designator . MINUSASSIGN expression
   76           | designator . MULASSIGN expression
   77           | designator . DIVASSIGN expression
   78           | designator . MODASSIGN expression
   79           | designator . ANDASSIGN expression
   80           | designator . ORASSIGN expression
   81           | designator . BANDASSIGN expression
   82           | designator . BORASSIGN expression
   83           | designator . XORASSIGN expression
  106 expr4: designator . lparenmark expressionlist rparenmark
  110      | designator .

    LPAREN       shift, and go to state 11
    ASSIGN       shift, and go to state 74
    PLUSASSIGN   shift, and go to state 75
    MINUSASSIGN  shift, and go to state 76
    MULASSIGN    shift, and go to state 77
    DIVASSIGN    shift, and go to state 78
    MODASSIGN    shift, and go to state 79
    ANDASSIGN    shift, and go to state 80
    ORASSIGN     shift, and go to state 81
    BANDASSIGN   shift, and go to state 82
    BORASSIGN    shift, and go to state 83
    XORASSIGN    shift, and go to state 84

    LPAREN    [reduce using rule 110 (expr4)]
    $default  reduce using rule 110 (expr4)

    lparenmark  go to state 85


State 35

   22 returnmark: RETURN expression .

    $default  reduce using rule 22 (returnmark)


State 36

   16 lparenmark: LPAREN ENDTOKEN .

    $default  reduce using rule 16 (lparenmark)


State 37

  100 expr4: PLUS expr4 .

    $default  reduce using rule 100 (expr4)


State 38

  106 expr4: designator . lparenmark expressionlist rparenmark
  110      | designator .

    LPAREN  shift, and go to state 11

    LPAREN    [reduce using rule 110 (expr4)]
    $default  reduce using rule 110 (expr4)

    lparenmark  go to state 85


State 39

  101 expr4: MINUS expr4 .

    $default  reduce using rule 101 (expr4)


State 40

  103 expr4: BINNOT expr4 .

    $default  reduce using rule 103 (expr4)


State 41

  102 expr4: NOT expr4 .

    $default  reduce using rule 102 (expr4)


State 42

   45 statement: UNDEF designator .

    $default  reduce using rule 45 (statement)


State 43

   37 statement: PRINT lparenmark . expressionlist rparenmark endmarker

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    $default  reduce using rule 89 (expressionlist)

    lparenmark      go to state 22
    expression      go to state 86
    expressionlist  go to state 87
    expr2           go to state 31
    expr3           go to state 32
    expr4           go to state 33
    designator      go to state 34


State 44

    0 $accept: ROOT $end .

    $default  accept


State 45

   38 statement: ifmark expression . thenmark stmseq ifstm

    THEN      shift, and go to state 88
    ENDTOKEN  shift, and go to state 89

    thenmark  go to state 90


State 46

   44 statement: defmark designator . lparenmark argumentlist rparenmark stmseq endmark

    LPAREN  shift, and go to state 11

    lparenmark  go to state 91


State 47

  105 expr4: lparenmark statement . commamark expression rparenmark

    COMMA     shift, and go to state 92
    ENDTOKEN  shift, and go to state 93

    commamark  go to state 94


State 48

   47 statement: expression .
  104 expr4: lparenmark expression . rparenmark

    RPAREN    shift, and go to state 95
    ENDTOKEN  shift, and go to state 96

    ENDTOKEN  [reduce using rule 47 (statement)]
    $default  reduce using rule 47 (statement)

    rparenmark  go to state 97


State 49

   39 statement: whilemark expression . domark stmseq endmark

    DO        shift, and go to state 98
    ENDTOKEN  shift, and go to state 99

    domark  go to state 100


State 50

   41 statement: unlessmark expression . thenmark stmseq endmark
   42          | unlessmark expression . thenmark stmseq elsemark stmseq endmark

    THEN      shift, and go to state 88
    ENDTOKEN  shift, and go to state 89

    thenmark  go to state 101


State 51

   40 statement: untillmark expression . domark stmseq endmark

    DO        shift, and go to state 98
    ENDTOKEN  shift, and go to state 99

    domark  go to state 102


State 52

   43 statement: casemark expression . whenmark expression thenmark stmseq whenstm

    WHEN      shift, and go to state 103
    ENDTOKEN  shift, and go to state 104

    whenmark  go to state 105


State 53

   60 endmarker2: SEMICOLON .
   61           | SEMICOLON . endmarker2

    SEMICOLON  shift, and go to state 53
    ENDTOKEN   shift, and go to state 54

    $default  reduce using rule 60 (endmarker2)

    endmarker2  go to state 106


State 54

   58 endmarker2: ENDTOKEN .
   59           | ENDTOKEN . endmarker2

    SEMICOLON  shift, and go to state 53
    ENDTOKEN   shift, and go to state 54

    $default  reduce using rule 58 (endmarker2)

    endmarker2  go to state 107


State 55

   54 stmseq: statement stmseq2 .

    $default  reduce using rule 54 (stmseq)


State 56

   62 endmarker: endmarker2 .

    $default  reduce using rule 62 (endmarker)


State 57

   55 stmseq: statement endmarker .
   56 stmseq2: endmarker . stmseq
   57        | endmarker . statement

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    UNTIL       shift, and go to state 7
    UNLESS      shift, and go to state 8
    CASE        shift, and go to state 9
    RETURN      shift, and go to state 10
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15
    DEF         shift, and go to state 16
    UNDEF       shift, and go to state 17
    PRINT       shift, and go to state 18

    $default  reduce using rule 55 (stmseq)

    ifmark      go to state 20
    defmark     go to state 21
    lparenmark  go to state 22
    returnmark  go to state 23
    whilemark   go to state 24
    unlessmark  go to state 25
    untillmark  go to state 26
    casemark    go to state 27
    statement   go to state 108
    stmseq      go to state 109
    expression  go to state 30
    expr2       go to state 31
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 34


State 58

   91 expr2: expr2 PLUS . expr3

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr3       go to state 110
    expr4       go to state 33
    designator  go to state 38


State 59

   92 expr2: expr2 MINUS . expr3

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr3       go to state 111
    expr4       go to state 33
    designator  go to state 38


State 60

   65 expression: expr2 EQ . expr2

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr2       go to state 112
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 38


State 61

   66 expression: expr2 NEQ . expr2

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr2       go to state 113
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 38


State 62

   67 expression: expr2 LT . expr2

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr2       go to state 114
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 38


State 63

   68 expression: expr2 LE . expr2

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr2       go to state 115
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 38


State 64

   69 expression: expr2 GT . expr2

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr2       go to state 116
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 38


State 65

   70 expression: expr2 GE . expr2

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr2       go to state 117
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 38


State 66

   71 expression: expr2 AND . expr2

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr2       go to state 118
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 38


State 67

   72 expression: expr2 OR . expr2

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr2       go to state 119
    expr3       go to state 32
    expr4       go to state 33
    designator  go to state 38


State 68

   94 expr3: expr3 TIMES . expr4

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr4       go to state 120
    designator  go to state 38


State 69

   95 expr3: expr3 DIVIDE . expr4

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr4       go to state 121
    designator  go to state 38


State 70

   96 expr3: expr3 MOD . expr4

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr4       go to state 122
    designator  go to state 38


State 71

   97 expr3: expr3 BINAND . expr4

    ID          shift, and go to state 1
    INTEGER     shift, and go to state 2
    REAL        shift, and go to state 3
    BOOLEANVAR  shift, and go to state 4
    LPAREN      shift, and go to state 11
    PLUS        shift, and go to state 12
    MINUS       shift, and go to state 13
    BINNOT      shift, and go to state 14
    NOT         shift, and go to state 15

    lparenmark  go to state 22
    expr4       go to state 123
    designator  go to state 38


State 72

   98 expr3: expr3 BINOR . expr4
